--- a/FM/FM.csproj
+++ b/FM/FM.csproj
@@ -82,6 +82,20 @@
     <Content Include="js\JDialog\JDialogCss.css" />
     <Content Include="js\JDialog\Jquery_Fn_Dialog.js" />
     <Content Include="js\ztree\demo.css" />
+    <Content Include="js\ztree\img\diy\1_close.png" />
+    <Content Include="js\ztree\img\diy\1_open.png" />
+    <Content Include="js\ztree\img\diy\2.png" />
+    <Content Include="js\ztree\img\diy\3.png" />
+    <Content Include="js\ztree\img\diy\4.png" />
+    <Content Include="js\ztree\img\diy\5.png" />
+    <Content Include="js\ztree\img\diy\6.png" />
+    <Content Include="js\ztree\img\diy\7.png" />
+    <Content Include="js\ztree\img\diy\8.png" />
+    <Content Include="js\ztree\img\diy\9.png" />
+    <Content Include="js\ztree\img\line_conn.gif" />
+    <Content Include="js\ztree\img\loading.gif" />
+    <Content Include="js\ztree\img\zTreeStandard.gif" />
+    <Content Include="js\ztree\img\zTreeStandard.png" />
     <Content Include="js\ztree\jquery.ztree.core-3.5.min.js" />
     <Content Include="js\ztree\zTreeStyle.css" />
     <Content Include="Web.config" />
