--- a/FM/Web.config
+++ b/FM/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" maxRequestLength="204800" executionTimeout ="7200" />
   </system.web>
   <connectionStrings>
     <add name="FileManageEntities" connectionString="metadata=res://*/FileManage.csdl|res://*/FileManage.ssdl|res://*/FileManage.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\FileManage.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
