--- a/FM/FM.csproj
+++ b/FM/FM.csproj
@@ -76,10 +76,21 @@
     <Content Include="images\amin.png" />
     <Content Include="images\btn_icon.gif" />
     <Content Include="images\btn_sprit.gif" />
+    <Content Include="images\doc.png" />
+    <Content Include="images\docx.png" />
+    <Content Include="images\other.png" />
     <Content Include="images\outer_bn2_8960d8f.gif" />
+    <Content Include="images\pdf.png" />
+    <Content Include="images\ppt.png" />
+    <Content Include="images\property_icon_101.png" />
+    <Content Include="images\rar.png" />
     <Content Include="images\spritenew-f.gif" />
     <Content Include="images\sprite_n1_ccdf642.gif" />
+    <Content Include="images\txt.png" />
     <Content Include="images\upload.png" />
+    <Content Include="images\xls.png" />
+    <Content Include="images\xlsx.png" />
+    <Content Include="images\zip.png" />
     <Content Include="index.aspx" />
     <Content Include="js\FM.js" />
     <Content Include="js\Guid.js" />
